button IE scale fix

--- a/assets/css/baseStyle.css
+++ b/assets/css/baseStyle.css
@@ -329,6 +329,7 @@ button:hover {
 .btn {
     color: #fff;
     text-align: center;
+    width: 40%;
     cursor: pointer;
     font-size: 1em;
     position: relative;
